--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -3,7 +3,10 @@ name: scraper-hourly
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "7 * * * *"
+    - cron: "7 * * * *"  # run at minute 7 every hour
+
+permissions:
+  contents: read
 
 jobs:
   scrape:
@@ -14,39 +17,39 @@ jobs:
       cancel-in-progress: true
 
     env:
-      # Flags / toggles
+      # -------- Feature toggles --------
       ENABLE_TRENDS:        ${{ vars.ENABLE_TRENDS || 'true' }}
       ENABLE_NEWSAPI:       ${{ vars.ENABLE_NEWSAPI || 'false' }}
       ENABLE_REDDIT_API:    ${{ vars.ENABLE_REDDIT_API || 'true' }}
       ENABLE_YOUTUBE:       ${{ vars.ENABLE_YOUTUBE || 'false' }}
       RUN_STRATEGY:         ${{ vars.RUN_STRATEGY || 'rotate' }}
 
-      # Limits
+      # -------- Limits --------
       MAX_RESULTS_PER_QUERY: ${{ vars.MAX_RESULTS_PER_QUERY || 8 }}
       MAX_QUERIES_PER_HOUR:  ${{ vars.MAX_QUERIES_PER_HOUR || 12 }}
       MAX_TOTAL_DOCS:        ${{ vars.MAX_TOTAL_DOCS || 500 }}
       REDDIT_PER_SUB:        ${{ vars.REDDIT_PER_SUB || 8 }}
 
-      # Keywords
+      # -------- Keywords --------
       SCRAPE_KEYWORDS: ${{ vars.SCRAPE_KEYWORDS || 'ai marketing, creator economy, social media trends' }}
 
-      # Backend / monitoring
-      BACKEND_URL:   ${{ secrets.BACKEND_URL }}
+      # -------- Backend / monitoring --------
+      BACKEND_URL:   ${{ secrets.BACKEND_URL }}     # e.g. https://adlobby-influai-backend.hf.space  (no trailing slash)
       ALERT_WEBHOOK: ${{ secrets.ALERT_WEBHOOK }}
 
-      # APIs
+      # -------- API keys --------
       GOOGLE_API_KEY:        ${{ secrets.GOOGLE_API_KEY }}
       GOOGLE_CSE_ID:         ${{ secrets.GOOGLE_CSE_ID }}
       NEWSAPI_KEY:           ${{ secrets.NEWSAPI_KEY }}
       REDDIT_CLIENT_ID:      ${{ secrets.REDDIT_CLIENT_ID }}
       REDDIT_CLIENT_SECRET:  ${{ secrets.REDDIT_CLIENT_SECRET }}
-      REDDIT_USER_AGENT:     ${{ vars.REDDIT_USER_AGENT }}
+      REDDIT_USER_AGENT:     ${{ vars.REDDIT_USER_AGENT }}  # optional; default set in bash below
       YOUTUBE_API_KEY:       ${{ secrets.YOUTUBE_API_KEY }}
 
-      # (only if you ever switch to direct mongo mode)
+      # -------- (only if you switch to direct mongo mode) --------
       MONGO_URI: ${{ secrets.MONGO_URI }}
 
-      # Misc
+      # -------- Misc scraper/env knobs --------
       OUTBOX_PATH: data/outbox.jsonl
       MIN_CONTENT_LEN: "150"
       HTTP_TIMEOUT_SEC: "20"
@@ -54,7 +57,7 @@ jobs:
       PDF_MAX_BYTES: "8388608"
       PDF_MAX_PAGES: "15"
 
-      # NEW: batched ingest tuning
+      # -------- Ingest tuning --------
       INGEST_BATCH_SIZE:   ${{ vars.INGEST_BATCH_SIZE || 20 }}
       INGEST_HTTP_TIMEOUT: ${{ vars.INGEST_HTTP_TIMEOUT || 120 }}
 
@@ -73,24 +76,27 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Warm up backend
+      - name: Warm up backend (best-effort)
         if: env.BACKEND_URL != ''
         run: |
+          BASE="${BACKEND_URL%/}"
           for i in {1..6}; do
-            echo "ping $BACKEND_URL/health ($i/6)"
-            if curl -fsS --max-time 10 "$BACKEND_URL/health" | grep -q '"ok":'; then
+            echo "ping $BASE/health ($i/6)"
+            if curl -fsS --max-time 10 "$BASE/health" | grep -q '"ok":'; then
               echo "backend is up"; exit 0; fi
             sleep 5
           done
           echo "backend didn't respond; continuing anyway"
 
-      - name: Write .env from env/secret context (with safe defaults)
+      - name: Write .env from secrets/vars (normalize BACKEND_URL, safe defaults)
         shell: bash
         run: |
+          # Normalize and provide defaults that are YAML-safe
+          BASE="${BACKEND_URL%/}"
           RU="${REDDIT_USER_AGENT:-python:adlobby-scraper:v1.0 (by /u/Good_Mycologist9190)}"
 
           cat > .env <<EOF
-          BACKEND_URL=${BACKEND_URL}
+          BACKEND_URL=${BASE}
           INGEST_MODE=http
 
           ENABLE_TRENDS=${ENABLE_TRENDS}
@@ -131,7 +137,8 @@ jobs:
           INGEST_HTTP_TIMEOUT=${INGEST_HTTP_TIMEOUT}
           EOF
 
-          echo "Wrote .env:"
+          echo "Using BACKEND_URL=${BASE}"
+          # Show the .env without leaking secrets
           sed 's/^\(.*KEY\)=.*/\1=***hidden***/; s/\(SECRET\|PASSWORD\)=.*/\1=***hidden***/' .env
 
       - name: Run scraper
